src/components/workstation/scrubber/Scrubber.css
.scrubber {
  flex: 1;
  display: flex;
  flex-direction: column;
  width: 100vw;
  position: relative;
  /* Prevent flex child from expanding beyond allocated space */
  min-height: 0;
}

.scrubber__timeline {
  flex: 1;
  display: flex;
  flex-direction: column;
  /* Constrain height so content scrolls instead of expanding the container */
  min-height: 0;
  overflow-y: scroll;
}

.scrubber__shade {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  pointer-events: none;
}

.scrubber__cursor {
  position: absolute;
  top: calc(var(--cursor-position) * 100% - 120px);
  left: 0;
  right: 0;
  height: 240px;
  pointer-events: none;
}

.scrubber__rewind {
  position: absolute;
  left: 8px;
  top: 8px;
}

.scrubber__rewind--hidden {
  opacity: 0;
  pointer-events: none;
}

.shade {
  width: 100%;
  height: 100%;
  background-image: linear-gradient(
    to bottom,
    rgb(var(--shade-color)),
    rgba(var(--shade-color), 0) 25%,
    rgba(var(--shade-color), 0.8) 75%,
    rgb(var(--shade-color)) 100%
  );
}

.plasma-playhead {
  display: block;
  width: 100%;
  height: 100%;
}

